# internal/models/user.go
@@ -17,6 +17,12 @@ type UserUpdateRequest struct {
 	Phone string `form:"phone" binding:"min=11,max=13" json:"phone"`
 }
 
+type UserChangePasswordRequest struct {
+	Name            string `form:"-" json:"-"`
+	Password        string `form:"password" binding:"required,max=16" json:"password,omitempty"`
+	ConfirmPassword string `binding:"required,eqfield=Password" json:"confirmPassword,omitempty"`
+}
+
 type User struct {
 	gorm.Model      `json:"-" form:"-"`
 	Name            string `gorm:"type:varchar(20);unique;not null" form:"name" binding:"required,min=3,max=20" json:"name"`
@@ -145,6 +151,52 @@ func UpdateUser(request *UserUpdateRequest) (*User, error) {
 	if request.Email != "" {
 		user.Email = request.Email
 	}
+
+	if err = tx.Save(&user).Error; err != nil {
+		return nil, err
+	}
+
+	if err = tx.Commit().Error; err != nil {
+		return nil, err
+	}
+
+	clearPassword(&user)
+	return &user, nil
+}
+
+func ChangePassword(request *UserChangePasswordRequest) (*User, error) {
+	var (
+		user   User
+		hashed []byte
+		err    error
+	)
+
+	tx := db.Begin()
+	// rollback when panic or err
+	defer func() {
+		if r := recover(); r != nil {
+			tx.Rollback()
+			return
+		}
+		if err != nil {
+			tx.Rollback()
+			return
+		}
+	}()
+
+	if err = tx.Error; err != nil {
+		return nil, err
+	}
+
+	if err = tx.Set("gorm:query_option", "FOR UPDATE").First(&user, &User{Name: request.Name}).Error; err != nil {
+		return nil, err
+	}
+
+	if hashed, err = pwd.Generate([]byte(request.Password)); err != nil {
+		return nil, err
+	}
+
+	user.Password = string(hashed)
 
 	if err = tx.Save(&user).Error; err != nil {
 		return nil, err
